--- a/localisation/v2_40.csv
+++ b/localisation/v2_40.csv
@@ -252,9 +252,9 @@ d_altay;阿勒泰;;;;;;;;;;x
 d_otuken;于都斤;;;;;;;;;;x
 d_khangai;杭爱;;;;;;;;;;x
 d_ikh_bogd;伊赫博格;;;;;;;;;;x
-k_khotan;于阗;;;;;;;;;;x
+k_khotan;和阗;;;;;;;;;;x
 d_kashgar;喀什噶尔;;;;;;;;;;x
-d_khotan;于阗;;;;;;;;;;x
+d_khotan;和阗;;;;;;;;;;x
 d_karashar;喀喇沙尔;;;;;;;;;;x
 d_kumul;哈密;;;;;;;;;;x
 EVTOPTA_WOL_415;有蝴蝶在我的肚子上!;;;;;;;;;;x
@@ -591,15 +591,15 @@ b_baygal;贝加尔;;;;;;;;;;x
 b_aj_bogd;阿朱博格;;;;;;;;;;x
 b_ikh_bogd;伊赫博格;;;;;;;;;;x
 b_tsagaannuur;查干诺尔;;;;;;;;;;x
-b_yarkand;鸦儿看;;;;;;;;;;x
+b_yarkand;叶尔羌;;;;;;;;;;x
 b_kashgar;喀什噶尔;;;;;;;;;;x
 b_aksu_mongolia;阿克苏;;;;;;;;;;x
 b_tumshuk;图木舒克;;;;;;;;;;x
-b_khotan;于阗;;;;;;;;;;x
+b_khotan;和阗;;;;;;;;;;x
 b_keriya;克里雅;;;;;;;;;;x
 b_niya;尼雅;;;;;;;;;;x
-b_cherchen;鄯善;;;;;;;;;;x
-b_charkliq;卡克里克;;;;;;;;;;x
+b_cherchen;且末;;;;;;;;;;x
+b_charkliq;若羌;;;;;;;;;;x
 b_miran;米兰;;;;;;;;;;x
 b_karashar;喀喇沙尔;;;;;;;;;;x
 b_kucha;龟兹;;;;;;;;;;x
@@ -613,11 +613,11 @@ d_trondelag;尼达罗斯;;;;;;;;;;x
 c_trondelag;尼达罗斯;;;;;;;;;;x
 c_trondelag_adj;特伦德拉格;;;;;;;;;;x
 PROV275;尼达罗斯;;;;;;;;;;x
-PROV1438;鸦儿看;;;;;;;;;;x
+PROV1438;叶尔羌;;;;;;;;;;x
 PROV1439;喀什噶尔;;;;;;;;;;x
-PROV1440;于阗;;;;;;;;;;x
-PROV1441;鄯善;;;;;;;;;;x
-PROV1442;卡克里克;;;;;;;;;;x
+PROV1440;和阗;;;;;;;;;;x
+PROV1441;且末;;;;;;;;;;x
+PROV1442;若羌;;;;;;;;;;x
 PROV1443;喀喇沙尔;;;;;;;;;;x
 PROV1444;龟兹;;;;;;;;;;x
 PROV1445;阿克苏;;;;;;;;;;x
