--- a/localisation/India.csv
+++ b/localisation/India.csv
@@ -1,5 +1,5 @@
 #CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-PROV1013;萝莉;;;;;;;;;;x
+PROV1013;洛里;;;;;;;;;;x
 PROV1112;摩菟来;;;;;;;;;;x
 PROV1113;查盖;;;;;;;;;;x
 PROV1114;摩呼耶陀补罗;;;;;;;;;;x
@@ -364,7 +364,7 @@ b_tigaja;提嘎加;;;;;;;;;;x
 b_cherkwa;车尔科瓦;;;;;;;;;;x
 b_metene;麼忒讷;;;;;;;;;;x
 b_gojjam;贡加姆;;;;;;;;;;x
-b_mankorar;曼科拉爾;;;;;;;;;;x
+b_mankorar;曼科拉尔;;;;;;;;;;x
 b_eliyas;伊利亚斯;;;;;;;;;;x
 b_yejube;耶苣布;;;;;;;;;;x
 b_godana_mikael;贡达纳 迈克尔;;;;;;;;;;x
