--- a/localisation/v1_06.csv
+++ b/localisation/v1_06.csv
@@ -686,7 +686,7 @@ SPECIAL_EVENTOPTION_1;这个选项可用是因为你高超的§Y军事§!技能;
 SPECIAL_EVENTOPTION_2;这个选项可用是因为你高超的§Y管理§!技能;;;;;;;;;;x
 SPECIAL_EVENTOPTION_3;这个选项可用是因为你高超的§Y阴谋§!技能;;;;;;;;;;x
 SPECIAL_EVENTOPTION_4;这个选项可用是因为你高超的§Y学习§!技能;;;;;;;;;;x
-SPECIAL_EVENTOPTION_TRAIT;这个选项可用是因为你有§Y$TRAITNAME$§!特质;;;;;;;;;;x
+SPECIAL_EVENTOPTION_TRAIT;因为你拥有 §Y$TRAITNAME$§! 特质，所以可以选择这一项;;;;;;;;;;x
 DECADENCE_TITLE;家族腐化;;;;;;;;;;x
 COMBAT_MODIFIER_DESC;§Y战斗修正§!\n修正此人率领军队的两翼\n\n;;;;;;;;;;x
 EVTDESC38304;这些声音对我低语, 让我去做什么... 可怕的, 他们让我去做可怕的事... 我得到了疯子的特质.;;;;;;;;;;x
