--- a/localisation/v2_13.csv
+++ b/localisation/v2_13.csv
@@ -1,6 +1,6 @@
 #CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-EVTDESC91369;[From.GetBestName]未能在[From.GetPossPronoun]试图让腐败的[FromFrom.GetBestName]重新恢复过来.他是一名卡菲尔，可以随意的拘捕监禁我们腐败王朝的统治者!;;;;;;;;;;x
-EVTOPTA91369;将鞋子踩在他们的头上!;;;;;;;;;;x
-EVTDESC91370;您的[GetFromRelation][From.GetBestName]已经成为腐败的源泉,并且已经是带来耻辱的[Root.GetOnlyDynastyName]的建筑!;;;;;;;;;;x
+EVTDESC91369;[From.GetBestName]未能在[From.GetPossPronoun]试图让腐败的[FromFrom.GetBestName]重新恢复过来。他现在是一名可耻的卡菲尔，可以被我们这个王朝的所有统治者自由地囚禁。;;;;;;;;;;x
+EVTOPTA91369;将鞋子踩在他的头上!;;;;;;;;;;x
+EVTDESC91370;家门不幸，您的[GetFromRelation][From.GetBestName]已经成为腐败的源泉，简直是[Root.GetOnlyDynastyName]的耻辱！;;;;;;;;;;x
 EVTOPTA91370;忘恩负义!;;;;;;;;;;x
-GRANT_LANDED_TITLE_INTERACTION_7;授予头衔给家族成员使家族腐化减少：§G$DECADENCE$%§!(效果与家族当前的腐化度相关);;;;;;;;;;x
+GRANT_LANDED_TITLE_INTERACTION_7;授予头衔给家族成员使家族腐败减少：§G$DECADENCE$%§!(效果与家族当前的腐化度相关);;;;;;;;;;x
