--- a/localisation/v2_21.csv
+++ b/localisation/v2_21.csv
@@ -34,7 +34,7 @@ ALLOW_FREE_DUCHY_REVOKATION_ON;可以无偿剥夺公爵头衔.\n;;;;;;;;;;x
 ALLOW_FREE_DUCHY_REVOKATION_OFF;不可无偿剥夺公爵头衔.\n;;;;;;;;;;x
 LIEGE_LEVY_DESC_VICE_ROY;\n   总督: $VALUE$;;;;;;;;;;x
 TITLE_NOT_VICE_ROYALTY;头衔不是总督;;;;;;;;;;x
-tribal_king_female;酋长女王;;;;;;;;;;x
+tribal_king_female;女酋长;;;;;;;;;;x
 tribal_emperor_female;女皇;;;;;;;;;;x
 temple_duke_female_pagan_group;女大祭司;;;;;;;;;;x
 temple_king_female_pagan_group;巫后;;;;;;;;;;x
