--- a/localisation/v1_06.csv
+++ b/localisation/v1_06.csv
@@ -211,7 +211,7 @@ EVTNAME60102;蒙古人洗劫了克拉科夫!;;;;;;;;;;x
 EVTDESC60102;蒙古人继续进军，越过维斯瓦河并攻入波兰. 克拉科夫现已落入侵略者之手，据说方圆百里都可见夜空被城市的大火映如白昼.;;;;;;;;;;x
 EVTOPTA60102;必须阻止他们!;;;;;;;;;;x
 EVTNAME60103;蒙古人洗劫了亚琛!;;;;;;;;;;x
-EVTDESC60103;就是亚琛, 查理曼大帝伟大的加洛林帝国前御座所在, 也已落入黄祸的阴影之中. 他的灵魂无疑在为城墙内正发生的暴行而哭泣.;;;;;;;;;;x
+EVTDESC60103;就是亚琛, 查理曼伟大的加洛林帝国前御座所在, 也已落入黄祸的阴影之中. 他的灵魂无疑在为城墙内正发生的暴行而哭泣.;;;;;;;;;;x
 EVTOPTA60103;这群蛮子!;;;;;;;;;;x
 EVTNAME60104;蒙古人洗劫了巴黎!;;;;;;;;;;x
 EVTDESC60104;犹如蝗灾过境, 不可阻挡的蒙古人攻陷了巴黎并洗劫了这座城市.尚未竣工的巴黎圣母院就如火海中的明烛，和燃烧的城市一起见证着日以继夜的抢掠和杀戮.;;;;;;;;;;x
