--- a/localisation/v2_50.csv
+++ b/localisation/v2_50.csv
@@ -1,5 +1,5 @@
 #CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-ERA_CHAR_NAME_6392;查理曼大帝;;;;;;;;;;x
+ERA_CHAR_NAME_6392;查理曼;;;;;;;;;;x
 ERA_CHAR_NAME_144999;卡洛曼一世;;;;;;;;;;x
 ERA_CHAR_NAME_190347;伦巴底 德西德里乌斯;;;;;;;;;;x
 ERA_CHAR_NAME_73679;阿卜杜拉赫曼一世;;;;;;;;;;x
