--- a/localisation/v2_40.csv
+++ b/localisation/v2_40.csv
@@ -255,7 +255,7 @@ d_ikh_bogd;伊赫博格;;;;;;;;;;x
 k_khotan;和阗;;;;;;;;;;x
 d_kashgar;喀什噶尔;;;;;;;;;;x
 d_khotan;和阗;;;;;;;;;;x
-d_karashar;喀喇沙尔;;;;;;;;;;x
+d_karashar;焉耆;;;;;;;;;;x
 d_kumul;哈密;;;;;;;;;;x
 EVTOPTA_WOL_415;有蝴蝶在我的肚子上!;;;;;;;;;;x
 EVTTOOLTIP_CM_4332;[This.GetTitledFirstName]成为了哈鲁里耶教团的一名成员。;;;;;;;;;;x
@@ -601,9 +601,9 @@ b_niya;尼雅;;;;;;;;;;x
 b_cherchen;且末;;;;;;;;;;x
 b_charkliq;若羌;;;;;;;;;;x
 b_miran;米兰;;;;;;;;;;x
-b_karashar;喀喇沙尔;;;;;;;;;;x
+b_karashar;焉耆;;;;;;;;;;x
 b_kucha;龟兹;;;;;;;;;;x
-b_kara_khoja;合剌火者;;;;;;;;;;x
+b_kara_khoja;高昌;;;;;;;;;;x
 b_luntai;轮台;;;;;;;;;;x
 b_dunhuang;敦煌;;;;;;;;;;x
 b_anxi;安西;;;;;;;;;;x
@@ -618,10 +618,10 @@ PROV1439;喀什噶尔;;;;;;;;;;x
 PROV1440;和阗;;;;;;;;;;x
 PROV1441;且末;;;;;;;;;;x
 PROV1442;若羌;;;;;;;;;;x
-PROV1443;喀喇沙尔;;;;;;;;;;x
+PROV1443;焉耆;;;;;;;;;;x
 PROV1444;龟兹;;;;;;;;;;x
 PROV1445;阿克苏;;;;;;;;;;x
-PROV1446;合剌火者;;;;;;;;;;x
+PROV1446;高昌;;;;;;;;;;x
 PROV1447;楼兰;;;;;;;;;;x
 PROV1448;敦煌;;;;;;;;;;x
 PROV1449;轮台;;;;;;;;;;x
