--- a/localisation/z_magne.csv
+++ b/localisation/z_magne.csv
@@ -1,3 +1,3 @@
 #CODE;ENGLISH;FRENCH;GERMAN;;SPANISH;;;;;;;;;x
-bear.6.undo;这难以忍受！;;;;;;;;;;x
-UNDO_BEAR_TRANSFORMATION;醒来后，所有的一切都恢复了正常。也许这都是一场梦...;;;;;;;;;;x
+bear.6.undo;这简直是熊孩子行为！;;;;;;;;;;x
+UNDO_BEAR_TRANSFORMATION;醒来后，一切都恢复了正常。也许这不过是一场梦...;;;;;;;;;;x
